# anclib

./: .gitignore  README.md  anclib.py  rst  setup.cfg
tests/: NS_test_MrBayes.ASR.results.txt  renamed_NS_test.nwk  renamed_NS_test_traits.txt  timetree_ancestral_sequences.fasta  timetree_annotated_tree.nexus
