[metadata]
name = anclib
version = 0.10.1
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = (Beginning of) library for analyzing ancestral reconstructions of DNA or protein sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/anclib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = anclib
python_requires = >=3.6
install_requires =
	sequencelib>=2.10.0
	phylotreelib>=1.24.0
	numpy
	pandas
	rpy2
	Levenshtein
